feat(mybatis-xmlreload): 修改pom、readme